# coxwave-assignment

./: .gitignore  README.md  config.py  db.py  llm.py  main.py  pyproject.toml  requirements.txt  ruff.toml  start.sh
client/: config.py  streamlit_app.py  utils.py
data/db/: chromadb_collection.pkl
data/db/.chromadb/: chroma.sqlite3
data/prompt/: prompt_system.txt
db/.chromadb/400ccf7d-98cd-44ac-8c5e-f31b17d14996/: index_metadata.pickle
db/prompt/: prompt_rag.txt  prompt_system.txt
server/: dependencies.py  main.py
server/common/chromadb/: config.py
server/common/chromadb/services/: database.py
server/common/openai/services/: embedding.py  gpt.py
server/common/openai/utils/: gpt_answer.py  tokenizer.py
server/db/chromadb/: config.py
server/db/chromadb/services/: __init__.py  database.py
server/llm/openai/: config.py
server/llm/openai/schemas/: gpt_answer.py
server/llm/openai/services/: __init__.py  embedding.py  gpt.py
server/llm/openai/utils/: gpt_answer.py  tokenizer.py
server/modules/chat/: __init__.py  config.py
server/modules/chat/dtos/: response.py
server/modules/chat/schemas/: __init__.py  request.py  response.py
server/modules/chat/services/: __init__.py  rag.py
server/router/: chat.py
