[project]
name = "coxwave"
version = "1.0"
description = "coxwvae-assignment"
authors = [
    {name = "songhee-lee"}
]
readme = "README.md"
requires-python = "3.12.8"
dependencies = [
    "fastapi (>=0.115.6,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "streamlit (>=1.41.1,<2.0.0)",
    "chromadb (>=0.6.2,<0.7.0)",
    "openai (>=1.59.6,<2.0.0)",
    "pydantic (>=2.10.5,<3.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "tiktoken (>=0.8.0,<0.9.0)",
    "tokenizers (>=0.21.0,<0.22.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.0"
pre-commit = "^4.0.1"

